calculate start of the month

--- a/_views/partials/body.html
+++ b/_views/partials/body.html
@@ -6,6 +6,8 @@
 					<qgoda-content>
 						[% IF asset.type == 'year' %]
 							[% INCLUDE 'partials/body/year.html' %]
+						[% ELSIF asset.type == 'month' %]
+							[% INCLUDE 'partials/body/month.html' %]
 						[% ELSE %]
 							[% asset.content %]
 						[% END %]
