--- a/_views/partials/body/year.html
+++ b/_views/partials/body/year.html
@@ -4,70 +4,46 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm">
-			<a href="01/">
-			[% INCLUDE 'partials/body/month.html' month=1 %]
-			</a>
+			<a href="01/">[% q.strftime('%B', asset.year _ '-1-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="02/">
-			[% INCLUDE 'partials/body/month.html' month=2 %]
-			</a>
+			<a href="02/">[% q.strftime('%B', asset.year _ '-2-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="03/">
-			[% INCLUDE 'partials/body/month.html' month=3 %]
-			</a>
+			<a href="03/">[% q.strftime('%B', asset.year _ '-3-1', asset.lang) %]</a>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm">
-			<a href="04/">
-			[% INCLUDE 'partials/body/month.html' month=4 %]
-			</a>
+			<a href="04/">[% q.strftime('%B', asset.year _ '-4-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="05/">
-			[% INCLUDE 'partials/body/month.html' month=5 %]
-			</a>
+			<a href="05/">[% q.strftime('%B', asset.year _ '-5-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="06/">
-			[% INCLUDE 'partials/body/month.html' month=6 %]
-			</a>
+			<a href="06/">[% q.strftime('%B', asset.year _ '-6-1', asset.lang) %]</a>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm">
-			<a href="07/">
-			[% INCLUDE 'partials/body/month.html' month=7 %]
-			</a>
+			<a href="07/">[% q.strftime('%B', asset.year _ '-7-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="08/">
-			[% INCLUDE 'partials/body/month.html' month=8 %]
-			</a>
+			<a href="08/">[% q.strftime('%B', asset.year _ '-8-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="09/">
-			[% INCLUDE 'partials/body/month.html' month=9 %]
-			</a>
+			<a href="09/">[% q.strftime('%B', asset.year _ '-9-1', asset.lang) %]</a>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm">
-			<a href="10/">
-			[% INCLUDE 'partials/body/month.html' month=10 %]
-			</a>
+			<a href="10/">[% q.strftime('%B', asset.year _ '-10-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="11/">
-			[% INCLUDE 'partials/body/month.html' month=11 %]
-			</a>
+			<a href="11/">[% q.strftime('%B', asset.year _ '-11-1', asset.lang) %]</a>
 		</div>
 		<div class="col-sm">
-			<a href="12/">
-			[% INCLUDE 'partials/body/month.html' month=12 %]
-			</a>
+			<a href="12/">[% q.strftime('%B', asset.year _ '-12-1', asset.lang) %]</a>
 		</div>
 	</div>
 </div>
