mark Saturdays and Sundays

--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -1,2 +1,13 @@
 // Photo calendar styles
+.wday {
+	font-size: 200%;
+	font-weight: 700;
+}
 
+.holiday {
+	color: red;
+}
+
+.saturday {
+	color: grey;
+}
